Fixed header alignment in index + photofeed

--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -7,11 +7,10 @@
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
-	margin-bottom: 1.5em;
 }
 
 .index__heading {
-	margin: 0;
+	margin: 0 1em 1em 0;
 	font-size: 1em;
 	font-weight: 400;
 	line-height: 1.2;
@@ -23,10 +22,7 @@
 .index__menu {
 	display: flex;
 	align-items: center;
-}
-
-.index__menu-item {
-	//
+	margin-bottom: 1em;
 }
 
 .index__jump-to {
