--- a/src/scss/components/photofeed.scss
+++ b/src/scss/components/photofeed.scss
@@ -5,17 +5,15 @@
 .photofeed__header {
 	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: space-between;
-	margin-bottom: 1em;
 	background-color: $color-bg;
 }
 
 .photofeed__back {
 	position: relative;
 	display: inline-block;
-	margin-left: 0.5em;
-	margin-right: 0.5em;
+	margin-bottom: 1em;
 	padding-left: 1.25em;
 	font-style: italic;
 	text-align: right;
@@ -25,11 +23,6 @@
 		position: absolute;
 		left: 0.25em;
 		font-style: normal;
-	}
-
-	@media (min-width: 500px) {
-		margin-left: 1em;
-		margin-right: 0;
 	}
 }
 
@@ -42,6 +35,11 @@
 	font-style: italic;
 	color: $color-bg;
 	background-color: $color-active;
+}
+
+.photofeed__heading {
+	margin-bottom: 1em;
+	margin-right: 1em;
 }
 
 .photofeed__list {
@@ -143,6 +141,10 @@
 		outline: none;
 		color: transparent;
 		background-color: $color-bg;
+
+		.photofeed__img {
+			opacity: 0.7;
+		}
 	}
 
 	.state-loaded & {
